Tue Nov 27 21:43:00 2013  Akira Matsuda  <ronnie@dio.jp>

	* lib/irb/notifier.rb:  [Doc] Fix typo
	* ext/json/lib/json/common.rb:  Ditto.

Tue Nov 27 18:04:57 2013  Akira Matsuda  <ronnie@dio.jp>

	* lib/irb/notifier.rb:  Fix typo

Wed Nov 27 17:54:57 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_stacked_objects): check only when check_mode > 0.

Wed Nov 27 16:07:19 2013  Aman Gupta <ruby@tmm1.net>

	* test/ruby/test_gc.rb (class TestGc): Fix warning in
	  test_expand_heap.

Wed Nov 27 15:55:52 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (Init_GC): Add new GC::INTERNAL_CONSTANTS for information about
	  GC heap/page/slot sizing.
	* test/ruby/test_gc.rb (class TestGc): test for above.

Wed Nov 27 15:21:17 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_page_sweep): Fix compile warning from last commit.
	* hash.c (hash_aset_str): Re-use existing variable to avoid
	  unnecessary pointer dereferencing.

Wed Nov 27 15:12:55 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_page_sweep): disable debug print.

Wed Nov 27 15:05:59 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stat): add new information heap_eden_page_length and
	  heap_tomb_page_length.

	* test/ruby/test_gc.rb: fix to use GC.stat[:heap_eden_page_length]
	  instead of GC.stat[:heap_length].
	  This test expects `heap_eden_page_length' (used pages size).

Wed Nov 27 15:02:53 2013  Aman Gupta <ruby@tmm1.net>

	* test/ruby/test_eval.rb (class TestEval): Use assert_same instead of
	  assert_equal.
	* test/ruby/test_hash.rb (class TestHash): ditto.
	* test/ruby/test_iseq.rb (class TestISeq): ditto.

Wed Nov 27 14:50:02 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rinda/ring.rb:  Announce RingServer for the same process.
	  [ruby-trunk - Bug #9163]
	* test/rinda/test_rinda.rb:  Tests for the above.

Wed Nov 27 14:37:33 2013  Aman Gupta <ruby@tmm1.net>

	* test/ruby/test_eval.rb (class TestEval): Add test for shared eval
	  filenames via rb_fstring().